获取登录用户信息，修改下拉bug，修改splash

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="colorPrimaryDark">#f3f3f3</color>
     <color name="pink500">#e93e61</color>
     <color name="pink300">#f06292</color>
+    <color name="bluegrey200">#b0bec5</color>
 </resources>
