--- a/app/src/main/res/layout/layout_shot.xml
+++ b/app/src/main/res/layout/layout_shot.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     app:cardBackgroundColor="@color/cardview_light_background"
     android:layout_height="wrap_content"
-    app:cardUseCompatPadding="true">
+    app:cardUseCompatPadding="true"
+    android:id="@+id/layout">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
