--- a/app/src/main/res/menu/menu_shots_detail.xml
+++ b/app/src/main/res/menu/menu_shots_detail.xml
@@ -1,10 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.lvpeiling.nodddle.ui.ShotsDetailActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
+        android:id="@+id/action_share"
+        android:orderInCategory="0"
         android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:icon="@mipmap/share"
+        app:showAsAction="ifRoom"
+        android:showAsAction="ifRoom"/>
 </menu>
