--- a/app/src/main/res/layout/activity_shots_detail.xml
+++ b/app/src/main/res/layout/activity_shots_detail.xml
@@ -27,6 +27,11 @@
                 android:adjustViewBounds="true"
                 android:fitsSystemWindows="true"
                 android:src="@mipmap/placeholder" />
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
@@ -36,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@mipmap/heart"
+        android:src="@mipmap/comment_big"
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|end" />
     <android.support.v4.widget.ContentLoadingProgressBar
