--- a/app/src/main/res/layout/content_shots_detail.xml
+++ b/app/src/main/res/layout/content_shots_detail.xml
@@ -26,39 +26,33 @@
                     android:orientation="horizontal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="right">
+                    android:layout_gravity="right">
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@mipmap/view"/>
                     <TextView
+                        android:id="@+id/tv_view"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="0"/>
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@mipmap/like"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="0"/>
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@mipmap/comment"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="0"/>
+                        android:layout_marginRight="4dp"/>
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@mipmap/attachement"/>
                     <TextView
+                        android:id="@+id/tv_attachement"
+                        android:layout_width="wrap_content"
+                        android:layout_marginRight="4dp"
+                        android:layout_height="wrap_content" />
+                    <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="0"/>
+                        android:src="@mipmap/buckets"/>
+                    <TextView
+                        android:id="@+id/tv_buckets"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
                 </LinearLayout>
             <TextView
                 android:id="@+id/tv_title"
@@ -74,7 +68,8 @@
             <HorizontalScrollView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:scrollbars="none">
+                android:scrollbars="none"
+                android:layout_marginBottom="16dp">
                 <LinearLayout
                     android:id="@+id/layout_tag"
                     android:orientation="horizontal"
@@ -85,9 +80,9 @@
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
-    <include layout="@layout/layout_send"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"/>
+    <!--<include layout="@layout/layout_send"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="bottom"/>-->
 </LinearLayout>
 
