--- a/app/src/main/res/layout/layout_userhead.xml
+++ b/app/src/main/res/layout/layout_userhead.xml
@@ -26,5 +26,22 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:textAppearanceSmall"/>
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:padding="16dp">
+        <ImageView
+            android:id="@+id/iv_like"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/like_button_selected" />
+        <TextView
+            android:id="@+id/tv_like"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp" />
+
+    </LinearLayout>
 
 </LinearLayout>
