修改评论点赞bug，增加查看大图功能，增加查看用户信息功能

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="pink500">#e93e61</color>
     <color name="pink300">#f06292</color>
     <color name="bluegrey200">#b0bec5</color>
+    <color name="black">#000000</color>
 </resources>
